src/component/button/snapshots/envision__component__button__tests__view_disabled.snap
---
source: src/component/button/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────┐
│     Disabled     │
│                  │
│                  │
└──────────────────┘
