src/component/button/snapshots/envision__component__button__tests__view_focused.snap
---
source: src/component/button/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────┐
│      Focused     │
│                  │
│                  │
└──────────────────┘
